# appie

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  project-plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pypi.yml
docs/: authentication.md  authentication.nl.md  cli.md  cli.nl.md  development.md  development.nl.md  getting-started.md  getting-started.nl.md  history.md  history.nl.md  index.md  index.nl.md  lists.md  lists.nl.md  mock-client.md  mock-client.nl.md  products.md  products.nl.md  receipts.md  receipts.nl.md
src/appie/: __init__.py  auth.py  client.py  lists.py  mock.py  models.py  products.py  pytest_plugin.py  receipts.py
tests/: conftest.py  test_auth.py  test_client.py  test_mock.py  test_package.py
